SERVER-116129 Internal transactions should never specify empty read concern (#45834)

GitOrigin-RevId: 0995e5615ead32eed632fc1a1707597731aa6452